Big blobb. See java/readme.md for details.